--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,11 +1,12 @@
 * {
-    border: 0;
+    border: none;
     border-color: #FFFFF0;
     border-radius: 12px;
     font-family: "Font Awesome 6 Pro", sans-serif;
     font-size: 10px;
     font-weight: 600;
     min-height: 0;
+    transition: 0s;
 }
 
 window#waybar {
@@ -25,7 +26,7 @@ window#waybar.hidden {
     border: none;
     transition: none;
     border-radius: 0;
-    margin: 0 5 0 15;
+    margin: 0 5px 0 18px;
     padding: 0;
 }
 
@@ -58,7 +59,7 @@ window#waybar.hidden {
     color: #FFFFF0;
     border-radius: 0;
     margin: 0;
-    padding: 0 5px 0 15px;
+    padding: 0 5px 0 5px;
 }
 
 #cpu {
@@ -66,7 +67,7 @@ window#waybar.hidden {
     color: #FFFFF0;
     border-radius: 0;
     margin: 0;
-    padding: 0 15px 0 5px;
+    padding: 0 10px 0 5px;
 }
 
 #window {
@@ -101,10 +102,11 @@ window#waybar.hidden {
     padding: 0 15px 0 15px;
 }
 
-#network, #bluetooth, #tray {
+#network, #bluetooth,
+#tray {
     background-color: transparent;
     color: #FFFFF0;
-    border-radius: 0;
+    border-radius: 8;
     margin: 0;
     padding: 0 15px 0 15px;
 }
@@ -113,8 +115,8 @@ window#waybar.hidden {
     background-color: transparent;
     color: #FFFFF0;
     border-radius: 0;
-    margin: 0 15 0 0;
-    padding: 0 15px 0 15px;
+    margin: 0 18px 0 5px;
+    padding: 0;
 }
 
 tooltip {
