--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,11 +1,10 @@
 * {
-    all: unset;
     border: none;
     border-radius: 12px;
     font-family: "font awesome 6 pro", sans-serif;
     font-size: 10px;
     font-weight: 600;
-    min-height: 25px;
+    min-height: 0;
     transition: 0s;
 }
 
@@ -35,8 +34,8 @@ window#waybar.hidden {
     transition: padding 0.15s ease-in-out 0.01s;
     border-radius: 12px;
     margin: 0 8px 0 8px;
-    min-height: 25px;
-    min-width: 12px;
+    min-height: 0px;
+    min-width: 1px;
 }
 
 #workspaces button:hover {
@@ -53,7 +52,7 @@ window#waybar.hidden {
     color: #191919;
     border-radius: 8px;
     border-color: #191919;
-    padding: 0 16px 0 16px;
+    padding: 0 23px 0 23px;
 }
 
 #memory {
@@ -77,7 +76,7 @@ window#waybar.hidden {
     color: #fffff0;
     border-radius: 0;
     margin: 0;
-    padding: 0 20px 0 20px;
+    padding: 0 5px 0 5px;
 }
 
 #privacy, #wireplumber {
